Configurable log level
Added new LogLevel app setting to limit the amount of logging to
EventLog (0 = no logging, 1 = Error only, 2 = Warn+Error, 3 =
Info+Warn+Error)

--- a/Src/Exchange.DkimSigner/App.config
+++ b/Src/Exchange.DkimSigner/App.config
@@ -31,6 +31,9 @@
       <setting name="HeadersToSign" serializeAs="String">
         <value>From; Subject; To; Date; Message-ID;</value>
       </setting>
+      <setting name="LogLevel" serializeAs="String">
+        <value>2</value>
+      </setting>
     </Exchange.DkimSigner.Properties.Settings>
   </applicationSettings>
 </configuration>
