--- a/Src/Exchange.DkimSigner/Properties/Settings.settings
+++ b/Src/Exchange.DkimSigner/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="HeadersToSign" Type="System.String" Scope="Application">
       <Value Profile="(Default)">From; Subject; To; Date; Message-ID;</Value>
     </Setting>
+    <Setting Name="LogLevel" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
