--- a/.gitignore
+++ b/.gitignore
@@ -104,4 +104,7 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
-/Src/Exchange.DkimSigner/bin
+Microsoft.Exchange.Data.Common.dll
+Microsoft.Exchange.Data.Common.xml
+Microsoft.Exchange.Data.Transport.dll
+Microsoft.Exchange.Data.Transport.xml
