--- a/Src/Exchange.DkimSigner/bin/Debug Exchange 2010 SP3/ExchangeDkimSigner.dll.config
+++ b/Src/Exchange.DkimSigner/bin/Debug Exchange 2010 SP3/ExchangeDkimSigner.dll.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
     <section name="domainSection" type="ConfigurationSettings.DomainSection, ExchangeDkimSigner"/>
     <sectionGroup name="customSection">
-      <section name="general" type="ConfigurationSettings.General, ExchangeDkimSigner" allowLocation="true" allowDefinition="Everywhere" />
+      <section name="general" type="ConfigurationSettings.General, ExchangeDkimSigner" allowLocation="true" allowDefinition="Everywhere"/>
     </sectionGroup>
   </configSections>
   <domainSection>
@@ -13,6 +13,6 @@
     </Domains>
   </domainSection>
   <customSection>
-    <general LogLevel="3" HeadersToSign="From; Subject; To; Date; Message-ID;" Algorithm="RsaSha1" />
+    <general LogLevel="3" HeadersToSign="From; Subject; To; Date; Message-ID;" Algorithm="RsaSha1"/>
   </customSection>
 <startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
