--- a/Src/Exchange.DkimSigner/App.config
+++ b/Src/Exchange.DkimSigner/App.config
@@ -8,8 +8,8 @@
   </configSections>
   <domainSection>
     <Domains>
-      <Domain Domain="example.com" Selector="sel2012" PrivateKeyFile="keys/example.com.private" Rules="*"/>
-      <Domain Domain="example.org" Selector="sel2013" PrivateKeyFile="keys/example.org.private" Rules="yahoo.com;yahoo.fr"/>
+      <Domain Domain="example.com" Selector="sel2012" PrivateKeyFile="keys/example.com.private"/>
+      <Domain Domain="example.org" Selector="sel2013" PrivateKeyFile="keys/example.org.private"  Rules="yahoo\.[^\.]+"/>
     </Domains>
   </domainSection>
   <customSection>
