--- a/Src/Exchange.DkimSigner/bin/Exchange 2013 CU3/ExchangeDkimSigner.dll.config
+++ b/Src/Exchange.DkimSigner/bin/Exchange 2013 CU3/ExchangeDkimSigner.dll.config
@@ -13,6 +13,6 @@
     </Domains>
   </domainSection>
   <customSection>
-    <general LogLevel="3" HeadersToSign="From; Subject; To; Date; Message-ID;" Algorithm="RsaSha1"/>
+    <general LogLevel="3" HeadersToSign="From; Subject; To; Date; Message-ID;" Algorithm="RsaSha1" HeaderCanonicalization="Simple" BodyCanonicalization="Simple"/>
   </customSection>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
