--- a/.gitignore
+++ b/.gitignore
@@ -104,13 +104,10 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
-Microsoft.Exchange.Data.Common.dll
-Microsoft.Exchange.Data.Common.xml
-Microsoft.Exchange.Data.Transport.dll
-Microsoft.Exchange.Data.Transport.xml
-
 /Src/Exchange.DkimSigner/bin/Debug Exchange 2013 CU2
-
 /Src/Exchange.DkimSigner/bin/Debug Exchange 2013
-
 /Src/Exchange.DkimSigner/bin/Debug Exchange 2010 SP3
+/Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Common.dll
+/Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Common.xml
+/Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.dll
+/Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.xml
