--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ install:
 
 script:
   - xbuild travis_3.5.proj
-  - xbuild travis_4.0.proj
+  - xbuild /p:TargetFrameworkProfile="" /p:TargetFrameworkVersion="v4.0" /p:Framework="NET40" travis_4.0.proj
 
