--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ install:
   - sudo apt-get install mono-devel mono-gmcs nunit-console
 
 script:
-  - xbuild travis_3.5.proj
-  - xbuild /p:TargetFrameworkProfile="" /p:TargetFrameworkVersion="v4.0" /p:Framework="NET40" travis_4.0.proj
+  - xbuild travis.proj
 
