--- a/Src/Exchange.DkimSigner/Exchange.DkimSigner (.NET 3.5).csproj
+++ b/Src/Exchange.DkimSigner/Exchange.DkimSigner (.NET 3.5).csproj
@@ -242,7 +242,7 @@
     <Compile Include="Configuration\DomainCollection.cs" />
     <Compile Include="Configuration\DomainSection.cs" />
     <Compile Include="Configuration\General.cs" />
-    <Compile Include="CryptHelper.cs" />
+    <Compile Include="RSACryptoHelper.cs" />
     <Compile Include="DkimCanonicalizationKind.cs" />
     <Compile Include="DkimSigningRoutingAgent.cs" />
     <Compile Include="DkimSigningRoutingAgentFactory.cs" />
@@ -256,6 +256,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RSACryptoFormat.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
