--- a/Src/Exchange.DkimSigner/Exchange.DkimSigner (.NET 4).csproj
+++ b/Src/Exchange.DkimSigner/Exchange.DkimSigner (.NET 4).csproj
@@ -243,6 +243,7 @@
     <Compile Include="Configuration\DomainSection.cs" />
     <Compile Include="Configuration\General.cs" />
     <Compile Include="RSACryptoHelper.cs" />
+    <Compile Include="RSACryptoFormat.cs" />
     <Compile Include="DkimCanonicalizationKind.cs" />
     <Compile Include="DkimSigningRoutingAgent.cs" />
     <Compile Include="DkimSigningRoutingAgentFactory.cs" />
