--- a/Src/Exchange.DkimSigner/Exchange.DkimSigner (.NET 3.5).csproj
+++ b/Src/Exchange.DkimSigner/Exchange.DkimSigner (.NET 3.5).csproj
@@ -248,8 +248,8 @@
     <Compile Include="DkimSigningRoutingAgent.cs" />
     <Compile Include="DkimSigningRoutingAgentFactory.cs" />
     <Compile Include="DkimAlgorithmKind.cs" />
-    <Compile Include="DefaultDkimSigner.cs" />
-    <Compile Include="IDkimSigner.cs" />
+    <Compile Include="DkimSigner.cs" />
+    <Compile Include="ISigner.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
