- Implemented Update functionality - Improved ExchangeHelper error handling - Added version prerelease detection

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ UpgradeLog*.XML
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Common.xml
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.dll
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.xml
+Thumbs.db
