--- a/Src/Exchange.DkimSigner/Exchange.DkimSigner.csproj
+++ b/Src/Exchange.DkimSigner/Exchange.DkimSigner.csproj
@@ -245,6 +245,10 @@
   <ItemGroup>
     <Compile Include="Configuration\DomainElement.cs" />
     <Compile Include="Configuration\RegistryHelper.cs" />
+    <Compile Include="RSA\AsnKeyBuilder.cs" />
+    <Compile Include="RSA\AsnKeyParser.cs" />
+    <Compile Include="RSA\BerDecodeError.cs" />
+    <Compile Include="RSA\BigInteger.cs" />
     <Compile Include="RSA\RSACryptoHelper.cs" />
     <Compile Include="RSA\RSACryptoFormat.cs" />
     <Compile Include="Configuration\DkimCanonicalizationKind.cs" />
